Changing custom proxy directory for per-strip proxies fails #45251

Closed
opened 2015-06-30 15:15:10 +02:00 by Gottfried Hofmann · 6 comments

System Information
Operating system and graphics card

Ubuntu 15.04 64 bit Gefore 580 GTX

Blender Version
Broken: 2.75 RC2 Linux 64bit
Worked: 2.74 release linux 64bit

Short description of error
The custom directory for per-strip proxies can be set only once. When changed, re-building of proxies fails. This also happens when the custom directory was not set per-strip but per-project.

Exact steps for others to reproduce the error
Add an image sequence to the VSE, turn on proxy / timecode, set a custom directory,
set selected strip proxies, rebuild proxies and time code indices. Change the custom directory. Rebuild again... :(

**System Information** Operating system and graphics card Ubuntu 15.04 64 bit Gefore 580 GTX **Blender Version** Broken: 2.75 RC2 Linux 64bit Worked: 2.74 release linux 64bit **Short description of error** The custom directory for per-strip proxies can be set only once. When changed, re-building of proxies fails. This also happens when the custom directory was not set per-strip but per-project. **Exact steps for others to reproduce the error** Add an image sequence to the VSE, turn on proxy / timecode, set a custom directory, set selected strip proxies, rebuild proxies and time code indices. Change the custom directory. Rebuild again... :(

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Gottfried Hofmann 2015-06-30 15:15:10 +02:00

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 7039808899

This issue was referenced by 703980889977c65fc34ca6aee8633a714fe0918b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a8355471b9

This issue was referenced by a8355471b92fee025cfa3785c8ea45ef3f3badef
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45251
No description provided.