Fix T45251 custom directory not taken into account for image proxies.